<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_room_status"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_status"
        android:title="@string/navigation_item_status"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_room_agenda"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_agenda"
        android:title="@string/navigation_item_agenda"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_item_all_rooms"
        android:enabled="true"
        android:icon="@drawable/ic_navigation_rooms"
        android:title="@string/navigation_item_all_rooms"
        app:showAsAction="ifRoom" />
</menu>