<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_select_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:text="@string/select_calendar_mode"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/login_mode_selection_radio_group"
        app:layout_constraintStart_toStartOf="@+id/login_mode_selection_radio_group"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />

    <RadioGroup
        android:id="@+id/login_mode_selection_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/login_mode_selection_confirm_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_select_mode_text">

        <RadioButton
            android:id="@+id/login_mode_resources_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resources" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_label_margin"
            android:layout_marginTop="-16dp"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:text="@string/recommended_for_google" />

        <RadioButton
            android:id="@+id/login_mode_calendar_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/radio_button_label_margin"
            android:layout_marginTop="-16dp"
            android:text="@string/recommended_for_caldav" />

    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_mode_selection_confirm_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/login_mode_selection_radio_group"
        app:layout_constraintTop_toBottomOf="@id/login_mode_selection_radio_group" />

</androidx.constraintlayout.widget.ConstraintLayout>