<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.synyx.android.reservator.screen.reservation.ReservationFragment">

    <data>

        <variable
            name="viewModel"
            type="de.synyx.android.meetingroom.screen.reservation.ReservationViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark"
        android:fitsSystemWindows="true"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/reservation_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/reservation_heading"
            android:textColor="#fff"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/event_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/event_name_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColorHint="#999"
            app:layout_constraintTop_toBottomOf="@id/reservation_heading">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.eventName}"
                android:textColor="#fff" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/event_date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingBottom="40dp"
            app:layout_constraintTop_toBottomOf="@id/event_name_layout">


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:paddingEnd="16dp"
                    android:textColor="#fff" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - "
                    android:textColor="#fff" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/event_end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColor="#fff" />

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/event_submit"
            style="@style/ReserveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_date_layout" />

    </android.support.constraint.ConstraintLayout>

</layout>