<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/status_fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/header_height"
    tools:background="@color/room_status_available"
    tools:context="de.synyx.android.meeroo.screen.main.MainActivity">

    <TextView
        android:id="@+id/availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_extra_large"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/event_duration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Verfügbar" />

    <TextView
        android:id="@+id/event_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/font_size_large"
        android:textColor="@color/text_white_almost"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availability"
        tools:text="1 Stunde 25 Minuten" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/font_size_extra_large"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/next_event_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_duration"
        tools:text="Vorstellungsgespräch mit Fabian" />

    <TextView
        android:id="@+id/next_event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_size_large"
        android:textColor="@color/text_white_almost"
        android:textStyle="normal"
        android:textAlignment="center"
        app:layout_goneMarginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/book_now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name"
        tools:text="Kein Folgetermin vorhanden" />

    <Button
        android:id="@+id/reserve"
        style="@style/ReserveButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/reserve"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/book_now"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/book_now"
        style="@style/ReserveButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/book_button_height"
        android:text="@string/book_now"
        android:textSize="24sp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reserve" />

    <Button
        android:id="@+id/end_now"
        style="@style/ReserveButton"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/end_now"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reserve" />
</android.support.constraint.ConstraintLayout>